# bmstu_compilers

./: .gitignore  README.md
lab1/: Taskfile.yml  btpc64-2  btpc64-2.pas  btpc64-2t  btpc64-2t.pas  btpc64-3.pas  btpc64-3t.pas  feature  feature.pas  hello
lab2/: go.mod  main.go  print
lab2/task/: task.go  task_test.go
lab2/test/: test.go
lab22/: main.py  parser_edsl.py
lab22/tests/: cart_prod.ref  inc.ref  next_id.ref
lab23/: Makefile
lab23/docs/: grammar.md
lab23/flex/: lexer.l
lab24/: CMakeLists.txt  Makefile  out.json  out.txt
lab24/syntax_analyzer/: CMakeLists.txt
lab24/syntax_analyzer/analyzer/: CMakeLists.txt
lab24/syntax_analyzer/analyzer/include/: analyzer.h
lab24/syntax_analyzer/analyzer/src/: analyzer.cpp  main.cpp
lab24/syntax_analyzer/ast/: CMakeLists.txt
lab24/syntax_analyzer/ast/include/: ast.h
lab24/syntax_analyzer/grammar/: CMakeLists.txt
lab24/syntax_analyzer/grammar/include/: symbol.h
lab24/syntax_analyzer/grammar/src/: grammar.cpp
lab24/syntax_analyzer/lexer/: CMakeLists.txt
lab24/syntax_analyzer/lexer/include/: coords.h  domain.h  lexer.h  token.h
lab24/syntax_analyzer/lexer/src/: lexer.cpp
lab24/syntax_analyzer/tree/include/: leaf.h  node.h
lab24/syntax_analyzer/tree/src/: inner.cpp
lab3/: Cargo.toml
lab32/: Makefile
lab33/: main.py  out.txt
lab4/: Cargo.toml
lab5/: go.mod  main.go  test.txt
lab6/: Makefile  a.out  lab  lab.lex  lab6.l  lex.yy.c  main.c  numbers  numbers.lex  test.txt
reports/: report1.md  report13.md  report14.md  report15.md  report2.md  report3.md  report5.md
(+118 files in other folders)
